--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ i{
 	height:100%;
 	background-color:#f2f3f4;
 }
+#context{height:76%}
 
 #top{
 	height:12%;
@@ -208,7 +209,7 @@ progress{
 	background-color:#f2f3f4;
 	transition:1s ease-in-out;
 }
-#popupContainer{
+.popupContainer{
 	height:90%;
 	margin:5% 5px;
 	font-size:25px;
@@ -221,7 +222,7 @@ progress{
 	color:#2b2b2b;
 	font-weight:bold;
 }
-#collect, #doubleCollect{
+#collect, #collectDouble{
 	border:none;
 	padding:12px 0;
 	border-radius:5px;
@@ -231,180 +232,18 @@ progress{
 	background-color:#0c8;
 	color:#f2f3f4;
 }
-#doubleCollect{
+#collectDouble{
 	background-color:#80c;
 	color:#f2f3f4;
 }
-
-/*
-		body{font-size:10px;margin:0}
-		.container{width:1024px;margin:auto;margin-top:15px}
-		.clear{clear:both}
-
-		#report-chart{float:left;text-align:center;width:1000px;margin-bottom:50px}
-		#report-list{float:left;width:1000px}
-
-		.side{position:fixed;z-index:2;left:0;top:0;display:inline-block;padding:8px;border-top:none;border-left:none;border-radius:0 0 10px 0}
-		#platform{float:left;font-size:16px}
-		#env{float:left;font-size:16px;padding-left:20px}
-
-		#table table{
-			margin-bottom:30px;
-			font-family:Helvetica;
-			border-collapse:collapse;
-			border-color:transparent;
-			border-radius:10px;
-			box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-moz-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-webkit-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-o-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-ms-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			font-size:15px;
-			line-height:1.4
-		}
-		.FailCasesTable{width:100%}
-		.tableTitle{font-size:25px;font-variant:small-caps;padding-bottom:0;padding-left:30px}
-		.testTitle{width:300px}
-		.critical{width:50px}
-		.criticalTD{padding:0}
-		th{
-			font-weight:unset;
-			padding:0;
-			padding-left:30px;
-			padding-bottom:10px;
-			font-size:16px;
-			font-family:arial;
-			text-align:left
-		}
-		tr.animated:hover{
-			font-size:16px;
-			cursor:pointer;
-			box-shadow:0 0 100px #000;
-			-webkit-transition:all 100ms ease-in-out;
-			-webkit-transform:scaleY(1.03);
-			-ms-transition:all 100ms ease-in-out;
-			-ms-transform:scaleY(1.03);   
-			-moz-transition:all 100ms ease-in-out;
-			-moz-transform:scaleY(1.03);
-			transition:all 100ms ease-in-out;
-			transform:scaleY(1.03)
-		}
-		td{padding:4px 15px}
-
-		.buttons{padding-bottom:10px}
-		.buttons input{
-			border:none;
-			font-size:20px;
-			height:30px;
-			padding:0 5px;
-			margin:0 6px;
-			border-radius:4px;
-			opacity:.6;
-			transition:.3s
-		}
-		.buttons input:hover{opacity:1;cursor:pointer}
-		.buttons{
-			font-family:Helvetica;
-			text-align:center;
-			vertical-align:middle
-		}
-		.buttons select{
-			font:400 16px/1.3 'Helvetica Neue',sans-serif;
-			line-height:.9;
-			outline:0;
-			padding:.65em 2.5em .55em .75em;
-			border-radius:3px;
-			border:none;
-			width:180px
-		}
-		.date{width:150px;
-			background:url(./web/img/calendar.svg) no-repeat 95%;background-size:15%}
-		.buttons input[type='checkbox']{
-			height:25px;
-			width:25px;
-			vertical-align:middle
-		}
-		.buttons label{
-			font-size:18px;
-			height:25px;
-			margin-left:25px;
-			vertical-align:baseline;
-			margin-bottom:12px;
-			-webkit-user-select:none;
-			-moz-user-select:none;
-			-ms-user-select:none;
-			user-select:none
-		}
-		#popup{
-			display:none;
-			position:fixed;
-			z-index:1;
-			padding-top:100px;
-			left:0;
-			top:0;
-			width:100%;
-			height:100%;
-			overflow:none;
-			background-color:rgb(0,0,0);
-			background-color:rgba(0,0,0,0.6);
-			transition:350ms ease-in-out
-		}
-		#detailsTable{
-			width:80%;
-			margin:auto;
-			height:75%;
-			border-radius:6px;
-			overflow:auto
-		}
-		#detailsTable table{
-			width:1000px;
-			margin:auto;
-			font-family:Helvetica;
-			border-collapse:collapse;
-			border-color:transparent;
-			border-radius:10px;
-			box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-moz-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-webkit-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-o-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			-ms-box-shadow:0 0px 40px 0px rgba(0,0,0,.15);
-			font-size:15px;
-			line-height:1.4
-		}
-		#detailsTable table tr{width:100%}
-		#detailsTable table.tableTitle{
-			font-size:24px;
-			padding-bottom:10px
-		}
-		.close{
-			position:fixed;
-			right:6%;
-			font-size:28px;
-			font-weight:bold
-		}
-		.close:hover,
-		.close:focus{
-			text-decoration:none;
-			cursor:pointer
-		}
-		#detailsSettings{
-			width:80%;
-			padding:12px;
-			margin:auto;
-			font-family:arial;
-			font-size:20px;
-			height:75%;
-			border-radius:6px;
-			overflow:auto;
-			display:none
-		}
-		#settings{
-			font-size:25px;
-			font-weight:bold
-		}
-		#settings:hover,
-		#settings:focus{
-			text-decoration:none;
-			cursor:pointer
-		}
-*/
+.close{
+	display:inline-block;
+	position:absolute;
+	right:10px;
+	top:5px;
+	cursor:pointer;
+	transition:.4s ease-in-out;
+}
+.close:hover{
+	color:#f0c;
+}
